# voice_assistant_ros2

./: .gitmodules  README.md  requirements.txt
openai_ros2/: package.xml  setup.py
openai_ros2/openai_ros2/: chatgpt.py
voice_assistant/: CMakeLists.txt  package.xml
voice_assistant/config/: voicevox_ros2_param.yaml
voice_assistant/include/voice_assistant/: voice_assistant.hpp
voice_assistant/launch/: voice_assistant.launch.py
voice_assistant/src/: main.cpp
whisper_ros2/: package.xml  setup.cfg  setup.py
whisper_ros2/whisper_ros2/: whisper_ros2.py
